--- a/geotrigger_app/app/views/layouts/application.html.erb
+++ b/geotrigger_app/app/views/layouts/application.html.erb
@@ -5,10 +5,31 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+		<!-- BASICS -->
+    <meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <title>GREEN responsive bootstraap template</title>
+      <meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />	
+		<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/bootstrap-theme.css">
+		<link href="css/responsive-slider.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/style.css">
+
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<!-- skin -->
+		<link rel="stylesheet" href="skin/default.css">
 </head>
 <body>
 
-<%= yield %>
+	<%= render partial: "layouts/navigation" %>
+
+	<div class="container">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
