--- a/geotrigger_app/app/assets/stylesheets/sites.css
+++ b/geotrigger_app/app/assets/stylesheets/sites.css
@@ -1,6 +1,6 @@
-// Place all the styles related to the sites controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*// Place all the styles related to the sites controller here.*/
+/*// They will automatically be included in application.css.*/
+/*// You can use Sass (SCSS) here: http://sass-lang.com/*/
 /* ==== Google font ==== */
 
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,200,100,500,600,700,800,900);
