--- a/geotrigger_app/app/views/users/new.html.erb
+++ b/geotrigger_app/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
+
+<!-- this is the Twitter button -->
+<button>Sign-In with Twitter</button>
