Basic landin page and sites layout setup.

--- a/geotrigger_app/app/views/sites/index.html.erb
+++ b/geotrigger_app/app/views/sites/index.html.erb
@@ -1,2 +1,210 @@
-<h1>Sites#index</h1>
-<p>Find me in app/views/sites/index.html.erb</p>
+<header>
+		 <div class="container">
+			 <div class="row">
+				 <div class="col-md-12">
+					  <h1>Are you Around?</h1>
+					  <p class="lead">'Cuz I'm Down...</p>
+					  
+					  <div class="carousel-iphone">
+					  	<div id="carousel-example-generic" class="carousel slide">
+					    
+					    <!-- Indicators -->
+					    <ol class="carousel-indicators">
+					      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+					      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+					      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+					    </ol>
+					  
+					    <!-- Wrapper for slides -->
+					    <div class="carousel-inner">
+					      <div class="item active">
+					        <img src="assets/screenshots/app-1.png" alt="App Screen 1">
+					      </div>
+					      <div class="item">
+					        <img src="assets/screenshots/app-2.png" alt="App Screen 2">
+					      </div>
+					      <div class="item">
+					        <img src="assets/screenshots/app-3.png" alt="App Screen 3">
+					      </div>
+					      
+					    </div>
+					  </div>
+					</div>
+				</div>	  
+			</div>    
+		</div>
+	 </header>
+	  
+	  
+	  <!-- PURCHASE
+	      ================================================== -->
+	  <section class="purchase">
+		  <div class="container">
+			  <div class="row">
+				  <div class="col-md-offset-2 col-md-8">
+					 <h1>Get together with friends</h1>
+					 	    <p class="lead">It's as easy as dropping a pin.</p>
+					 	    <button type="button" class="app-store"></button>	
+				  </div>
+			  </div>
+		  </div>
+	  </section>
+	  
+	  
+	  <!-- PAYOFF 
+	      ================================================== -->
+	  <section class="payoff">
+		<div class="container">
+			  <div class="row">
+				  <div class="col-md-12">
+					  <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
+				  </div>
+			  </div>
+		  </div>	  
+	  </section>
+	  
+	  
+	  <!-- DETAILS 
+	      ================================================== -->
+	  <section class="detail">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div id="carousel-example-generic-2" class="carousel slide">
+										
+					  <!-- Wrapper for slides -->
+					  <div class="carousel-inner">
+					    <div class="item active">
+					      	<div class="row">
+					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
+					      			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
+					      			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					      		</div>
+					      		<div class="col-sm-12 col-md-5">
+					      			<div class="app-screenshot">
+					      				<img src="assets/screenshots/app-1.png" class="img-responsive" alt="App Screen 1">
+					      			</div>
+					      		</div>
+					      	</div>
+					    </div>
+					    <div class="item">
+					    	<div class="row">
+					    		<div class="col-sm-12 col-md-offset-1 col-md-6">
+					    			<h1>Sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
+					    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					    		</div>
+					    		<div class="col-sm-12 col-md-5">
+					    			<div class="app-screenshot">
+					    				<img src="assets/screenshots/app-2.png" class="img-responsive" alt="App Screen 2">
+					    			</div>
+					    		</div>
+					    	</div>
+						</div>
+					    <div class="item">
+					      <div class="row">
+					      	<div class="col-sm-12 col-md-offset-1 col-md-6">
+					      		<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
+					      		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					      	</div>
+					      	<div class="col-sm-12 col-md-5">
+					      		<div class="app-screenshot">
+					      			<img src="assets/screenshots/app-3.png" class="img-responsive" alt="App Screen 3">
+					      		</div>
+					      	</div>
+					      </div>
+					    </div>
+					  </div>
+					
+					  <!-- Indicators -->
+					  <ol class="carousel-indicators">
+					    <li data-target="#carousel-example-generic-2" data-slide-to="0" class="active"></li>
+					    <li data-target="#carousel-example-generic-2" data-slide-to="1"></li>
+					    <li data-target="#carousel-example-generic-2" data-slide-to="2"></li>
+					  </ol>		
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	  
+	  <!-- FEATURES
+	      ================================================== -->
+	  <section class="features">
+		  <div class="container">
+			  <div class="row">
+				
+				  <div class="col-md-4">
+					  <div class="circle"><i class="icon-bookmark"></i></div>
+					  <h2>Easy Interaction</h2>
+					  <p>Get straight to the point, create an activity &amp; and connect with friends.</p>
+				  </div>
+				
+				  <div class="col-md-4">
+					  <div class="circle"><i class="icon-keypad"></i></div>
+					  <h2>Bump Into Friends</h2>
+					  <p>State-of-the-Art geolocation populates your dashboard with friends in the immediate area.</p>
+				  </div>
+				 
+				  <div class="col-md-4">
+					  <div class="circle"><i class="icon-like"></i></div>
+					  <h2>In a Galaxy</h2>
+					  <p>Far, far away... Three developers built a dope app</p>
+				  </div>
+				  
+			  </div>
+		  </div>
+	  </section>
+	  
+	
+	 <!-- SOCIAL
+	     ================================================== -->
+	  <section class="social">
+	  	<div class="container">
+	  		  <div class="row">
+	  			  <div class="col-md-12">
+	  			  	<h2>Connect with us</h2>
+	  			   	<a class="icon-facebook"></a>
+	  			   	<a class="icon-twitter"></a>
+	  			   	<a class="icon-google"></a>
+	  			   	<a class="icon-instagram"></a>
+	  			   	<a class="icon-pinterest"></a>
+	  			   </div>
+	  		  </div>
+	  	  </div>	  
+	  </section>
+	  
+	
+	 <!-- GET IT 
+	     ================================================== -->
+	  <section class="get-it">
+	  	<div class="container">
+	  		<div class="row">
+	  			<div class="col-md-12">
+	  				<h1>Available now in San Francisco, California.</h1>
+	  				<p class="lead">Sign Up and Get Down</p>
+	  				<button type="button" class="app-store"></button>
+	  			</div>
+	  			<div class="col-md-12">
+	  				<hr />
+		  			<ul>
+            	<li><a href="#link-here">Contact</a></li>
+            	<li><a href="#link-here">Twitter</a></li>
+            	<li><a href="#link-here">Blog</a></li>
+            	<li><a href="#link-here">Support</a></li>
+            	<li><a href="#link-here">Developers</a></li>
+            	<li><a href="#link-here">Privacy</a></li>
+          	</ul>
+	  			</div>
+	  		</div>
+	  	</div>
+	  </section>
+	  
+	 
+	 <!-- JAVASCRIPT
+	     ================================================== -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/animatescroll.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/retina-1.1.0.min.js"></script>
