--- a/geotrigger_app/app/views/layouts/application.html.erb
+++ b/geotrigger_app/app/views/layouts/application.html.erb
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GeotriggerApp</title>
+  <title>Around & Down</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-		<!-- BASICS -->
-    <meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>GREEN responsive bootstraap template</title>
-      <meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />	
-		<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/bootstrap-theme.css">
-		<link href="css/responsive-slider.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/animate.css">
-        <link rel="stylesheet" href="css/style.css">
-
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<!-- skin -->
-		<link rel="stylesheet" href="skin/default.css">
+  <!-- CSS 
+      ================================================== -->
+  <!-- Bootstrap 3-->
+  <link href="assets/bootstrap.min.css" rel="stylesheet" media="screen">
+  <!-- Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+  <!-- Template Styles -->
+  <link href="assets/application.css" rel="stylesheet" media="screen">
+  <link href="assets/iconfont.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+		<%= render partial: "layouts/navigation" %>
 
-	<%= render partial: "layouts/navigation" %>
-
-	<div class="container">
 		<%= yield %>
-	</div>
 
-</body>
+	</body>
 </html>
