--- a/geotrigger_app/app/views/users/index.html.erb
+++ b/geotrigger_app/app/views/users/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div>
+  <h1>Users#index</h1>
+  <p>Find me in app/views/users/index.html.erb</p>
+
+<%= @users %>
+<% @users.each do |user| %>
+  <div>
+    <p>
+      <strong><%= user.email %></strong>
+       <%= button_to "Add Friend", friendships_path(:friend_id => user), :method => "post" %>
+      <div class="clear"></div>
+    </p>
+  </div>
+<% end %>
+
