Add font-awesome library and font-awesome css. Insert social media icons to sites/index.

--- a/geotrigger_app/app/views/layouts/_navigation.html.erb
+++ b/geotrigger_app/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,7 @@
 	  <!--Replace text with your app name or logo image-->
 	  <ul class="nav navbar-nav">
 	    <li><a href="/sign_up">Sign Up</a></li>
-	    <li><a href="/login">Screens</a></li>
+	    <li><a href="/login">Login</a></li>
 	    <li><a href="#">Features</a></li>
 	    <li><a href="#">The Architects</a></li>
 	    <li><a href="#">Contact Us</a></li>
