--- a/geotrigger_app/app/views/layouts/application.html.erb
+++ b/geotrigger_app/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+  <!-- Font Awesome -->
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- Template Styles -->
   <link href="assets/application.css" rel="stylesheet" media="screen">
   <link href="assets/iconfont.css" rel="stylesheet" type="text/css">
