--- a/geotrigger_app/app/views/sites/index.html.erb
+++ b/geotrigger_app/app/views/sites/index.html.erb
@@ -164,11 +164,11 @@
 	  		  <div class="row">
 	  			  <div class="col-md-12">
 	  			  	<h2>Connect with us</h2>
-	  			   	<a class="icon-facebook"></a>
-	  			   	<a class="icon-twitter"></a>
-	  			   	<a class="icon-google"></a>
-	  			   	<a class="icon-instagram"></a>
-	  			   	<a class="icon-pinterest"></a>
+	  			   	<a class="fa fa-facebook"></a>
+	  			   	<a class="fa fa-twitter"></a>
+	  			   	<a class="fa fa-google"></a>
+	  			   	<a class="fa fa-instagram"></a>
+	  			   	<a class="fa fa-pinterest"></a>
 	  			   </div>
 	  		  </div>
 	  	  </div>	  
