--- a/geotrigger_app/app/views/sites/index.html.erb
+++ b/geotrigger_app/app/views/sites/index.html.erb
@@ -135,19 +135,19 @@
 			  <div class="row">
 				
 				  <div class="col-md-4">
-					  <div class="circle"><i class="icon-bookmark"></i></div>
+					  <div class="circle"><i class="fa fa-users"></i></div>
 					  <h2>Easy Interaction</h2>
 					  <p>Get straight to the point, create an activity &amp; and connect with friends.</p>
 				  </div>
 				
 				  <div class="col-md-4">
-					  <div class="circle"><i class="icon-keypad"></i></div>
+					  <div class="circle"><i class="fa fa-puzzle-piece"></i></div>
 					  <h2>Bump Into Friends</h2>
 					  <p>State-of-the-Art geolocation populates your dashboard with friends in the immediate area.</p>
 				  </div>
 				 
 				  <div class="col-md-4">
-					  <div class="circle"><i class="icon-like"></i></div>
+					  <div class="circle"><i class="fa fa-heart"></i></div>
 					  <h2>In a Galaxy</h2>
 					  <p>Far, far away... Three developers built a dope app</p>
 				  </div>
@@ -203,8 +203,183 @@
 	 
 	 <!-- JAVASCRIPT
 	     ================================================== -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/animatescroll.js"></script>
-    <script src="js/scripts.js"></script>
-    <script src="js/retina-1.1.0.min.js"></script>
+		<script language="JavaScript" type="text/javascript">
+			$(document).ready(function(){
+				$('header .carousel').carousel({
+				interval: 3000
+					})
+			});
+
+		</script>
+// 	  <script>
+
+// 	  	// toggle visibility for css3 animations 
+// $(document).ready(function() {
+// 	$('header').addClass('visibility');
+// 	$('.carousel-iphone').addClass('visibility');
+// 	$('.payoff h1').addClass('visibility');
+// 	$('.features .col-md-4').addClass('visibility');
+// 	$('.social .col-md-12').addClass('visibility');
+// });
+
+
+// //iphone carousel animation
+// $(window).load(function () {
+// 	$('header').addClass("animated fadeIn");
+// 	$('.carousel-iphone').addClass("animated fadeInLeft");
+// });
+// // Fixed navbar
+// $(window).scroll(function () {
+
+// var scrollTop = $(window).scrollTop();
+
+// 	if (scrollTop > 200) {
+// 		$('.navbar-default').css('display', 'block');
+// 		$('.navbar-default').addClass('fixed-to-top');
+			
+// 	} else if (scrollTop == 0)   {
+	
+// 		$('.navbar-default').removeClass('fixed-to-top');
+// 	}
+	
+	
+// //animations	
+// 	$('.payoff h1').each(function(){
+			
+// 		var imagePos = $(this).offset().top;
+// 		var topOfWindow = $(window).scrollTop();
+			
+// 			if (imagePos < topOfWindow+650) {
+// 				$(this).addClass("animated fadeInLeft");
+// 			}		
+				
+// 	});
+	
+// 	$('.purchase button.app-store').each(function(){
+			
+// 		var imagePos = $(this).offset().top;
+// 		var topOfWindow = $(window).scrollTop();
+			
+// 			if (imagePos < topOfWindow+650) {
+// 				$(this).addClass("animated pulse");
+// 			}		
+				
+// 	});
+	
+// 	$('.features .col-md-4').each(function(){
+			
+// 		var imagePos = $(this).offset().top;
+// 		var topOfWindow = $(window).scrollTop();
+			
+// 			if (imagePos < topOfWindow+650) {
+// 				$(this).addClass("animated flipInX");
+// 			}		
+				
+// 	});
+	
+// 	$('.social .col-md-12').each(function(){
+			
+// 		var imagePos = $(this).offset().top;
+// 		var topOfWindow = $(window).scrollTop();
+			
+// 			if (imagePos < topOfWindow+550) {
+// 				$(this).addClass("animated fadeInLeft");
+// 			}		
+				
+// 	});
+	
+// 	$('.get-it button.app-store').each(function(){
+			
+// 		var imagePos = $(this).offset().top;
+// 		var topOfWindow = $(window).scrollTop();
+			
+// 			if (imagePos < topOfWindow+850) {
+// 				$(this).addClass("animated pulse");
+// 			}		
+				
+// 	});
+	
+	
+// });
+
+
+// // Parallax Content
+
+// function parallax() {
+
+// 		// Turn parallax scrolling off for iOS devices
+		   
+// 		    var iOS = false,
+// 		        p = navigator.platform;
+		
+// 		    if (p === 'iPad' || p === 'iPhone' || p === 'iPod') {
+// 		        iOS = true;
+// 		    }
+	
+// 		var scaleBg = -$(window).scrollTop() / 3;
+
+//         if (iOS === false) {
+//             $('.payoff').css('background-position-y', scaleBg - 150);
+//             $('.social').css('background-position-y', scaleBg + 200);
+//         }
+   
+// }
+
+// function navbar() {
+
+// 	if ($(window).scrollTop() > 1) {
+// 	    $('#navigation').addClass('show-nav');
+// 	} else {
+// 	    $('#navigation').removeClass('show-nav');
+// 	}
+	
+// }
+
+// $(document).ready(function () {
+
+// 	var browserWidth = $(window).width();
+	
+// 	if (browserWidth > 560){ 
+	
+// 		$(window).scroll(function() {
+// 			parallax();
+// 			navbar();
+// 		});
+	
+// 	}
+
+// });	
+
+
+// $(window).resize(function () {
+
+// 	var browserWidth = $(window).width();
+	
+// 	if (browserWidth > 560){ 
+	
+// 		$(window).scroll(function() {
+// 			parallax();
+// 			navbar();
+// 		});
+	
+// 	}
+
+// });	
+
+
+// // iPhone Header Carousel
+// $('header .carousel').carousel({
+//   interval: 3000
+// })
+
+// // iPhone Features Carousel
+// $('.detail .carousel').carousel({
+//   interval: 4000
+// })
+
+// 	  </script>
+    <script src="vendor/assets/javascripts/jquery.js"></script>
+    <script src="vendor/assets/javascripts/bootstrap.min.js"></script>
+    <script src="vendor/assets/javascripts/animatescroll.js"></script>
+    <script src="vendor/assets/javascripts/scripts.js"></script>
+    <script src="vendor/assets/javascripts/retina-1.1.0.min.js"></script>
