--- a/geotrigger_app/app/views/sites/index.html.erb
+++ b/geotrigger_app/app/views/sites/index.html.erb
@@ -211,173 +211,173 @@
 			});
 
 		</script>
-// 	  <script>
+	  <script>
 
-// 	  	// toggle visibility for css3 animations 
-// $(document).ready(function() {
-// 	$('header').addClass('visibility');
-// 	$('.carousel-iphone').addClass('visibility');
-// 	$('.payoff h1').addClass('visibility');
-// 	$('.features .col-md-4').addClass('visibility');
-// 	$('.social .col-md-12').addClass('visibility');
-// });
+	  	// toggle visibility for css3 animations 
+$(document).ready(function() {
+	$('header').addClass('visibility');
+	$('.carousel-iphone').addClass('visibility');
+	$('.payoff h1').addClass('visibility');
+	$('.features .col-md-4').addClass('visibility');
+	$('.social .col-md-12').addClass('visibility');
+});
 
 
-// //iphone carousel animation
-// $(window).load(function () {
-// 	$('header').addClass("animated fadeIn");
-// 	$('.carousel-iphone').addClass("animated fadeInLeft");
-// });
-// // Fixed navbar
-// $(window).scroll(function () {
+//iphone carousel animation
+$(window).load(function () {
+	$('header').addClass("animated fadeIn");
+	$('.carousel-iphone').addClass("animated fadeInLeft");
+});
+// Fixed navbar
+$(window).scroll(function () {
 
-// var scrollTop = $(window).scrollTop();
+var scrollTop = $(window).scrollTop();
 
-// 	if (scrollTop > 200) {
-// 		$('.navbar-default').css('display', 'block');
-// 		$('.navbar-default').addClass('fixed-to-top');
+	if (scrollTop > 200) {
+		$('.navbar-default').css('display', 'block');
+		$('.navbar-default').addClass('fixed-to-top');
 			
-// 	} else if (scrollTop == 0)   {
+	} else if (scrollTop == 0)   {
 	
-// 		$('.navbar-default').removeClass('fixed-to-top');
-// 	}
+		$('.navbar-default').removeClass('fixed-to-top');
+	}
 	
 	
-// //animations	
-// 	$('.payoff h1').each(function(){
+//animations	
+	$('.payoff h1').each(function(){
 			
-// 		var imagePos = $(this).offset().top;
-// 		var topOfWindow = $(window).scrollTop();
+		var imagePos = $(this).offset().top;
+		var topOfWindow = $(window).scrollTop();
 			
-// 			if (imagePos < topOfWindow+650) {
-// 				$(this).addClass("animated fadeInLeft");
-// 			}		
+			if (imagePos < topOfWindow+650) {
+				$(this).addClass("animated fadeInLeft");
+			}		
 				
-// 	});
+	});
 	
-// 	$('.purchase button.app-store').each(function(){
+	$('.purchase button.app-store').each(function(){
 			
-// 		var imagePos = $(this).offset().top;
-// 		var topOfWindow = $(window).scrollTop();
+		var imagePos = $(this).offset().top;
+		var topOfWindow = $(window).scrollTop();
 			
-// 			if (imagePos < topOfWindow+650) {
-// 				$(this).addClass("animated pulse");
-// 			}		
+			if (imagePos < topOfWindow+650) {
+				$(this).addClass("animated pulse");
+			}		
 				
-// 	});
+	});
 	
-// 	$('.features .col-md-4').each(function(){
+	$('.features .col-md-4').each(function(){
 			
-// 		var imagePos = $(this).offset().top;
-// 		var topOfWindow = $(window).scrollTop();
+		var imagePos = $(this).offset().top;
+		var topOfWindow = $(window).scrollTop();
 			
-// 			if (imagePos < topOfWindow+650) {
-// 				$(this).addClass("animated flipInX");
-// 			}		
+			if (imagePos < topOfWindow+650) {
+				$(this).addClass("animated flipInX");
+			}		
 				
-// 	});
+	});
 	
-// 	$('.social .col-md-12').each(function(){
+	$('.social .col-md-12').each(function(){
 			
-// 		var imagePos = $(this).offset().top;
-// 		var topOfWindow = $(window).scrollTop();
+		var imagePos = $(this).offset().top;
+		var topOfWindow = $(window).scrollTop();
 			
-// 			if (imagePos < topOfWindow+550) {
-// 				$(this).addClass("animated fadeInLeft");
-// 			}		
+			if (imagePos < topOfWindow+550) {
+				$(this).addClass("animated fadeInLeft");
+			}		
 				
-// 	});
+	});
 	
-// 	$('.get-it button.app-store').each(function(){
+	$('.get-it button.app-store').each(function(){
 			
-// 		var imagePos = $(this).offset().top;
-// 		var topOfWindow = $(window).scrollTop();
+		var imagePos = $(this).offset().top;
+		var topOfWindow = $(window).scrollTop();
 			
-// 			if (imagePos < topOfWindow+850) {
-// 				$(this).addClass("animated pulse");
-// 			}		
+			if (imagePos < topOfWindow+850) {
+				$(this).addClass("animated pulse");
+			}		
 				
-// 	});
+	});
 	
 	
-// });
+});
 
 
-// // Parallax Content
+// Parallax Content
 
-// function parallax() {
+function parallax() {
 
-// 		// Turn parallax scrolling off for iOS devices
+		// Turn parallax scrolling off for iOS devices
 		   
-// 		    var iOS = false,
-// 		        p = navigator.platform;
+		    var iOS = false,
+		        p = navigator.platform;
 		
-// 		    if (p === 'iPad' || p === 'iPhone' || p === 'iPod') {
-// 		        iOS = true;
-// 		    }
+		    if (p === 'iPad' || p === 'iPhone' || p === 'iPod') {
+		        iOS = true;
+		    }
 	
-// 		var scaleBg = -$(window).scrollTop() / 3;
+		var scaleBg = -$(window).scrollTop() / 3;
 
-//         if (iOS === false) {
-//             $('.payoff').css('background-position-y', scaleBg - 150);
-//             $('.social').css('background-position-y', scaleBg + 200);
-//         }
+        if (iOS === false) {
+            $('.payoff').css('background-position-y', scaleBg - 150);
+            $('.social').css('background-position-y', scaleBg + 200);
+        }
    
-// }
+}
 
-// function navbar() {
+function navbar() {
 
-// 	if ($(window).scrollTop() > 1) {
-// 	    $('#navigation').addClass('show-nav');
-// 	} else {
-// 	    $('#navigation').removeClass('show-nav');
-// 	}
+	if ($(window).scrollTop() > 1) {
+	    $('#navigation').addClass('show-nav');
+	} else {
+	    $('#navigation').removeClass('show-nav');
+	}
 	
-// }
+}
 
-// $(document).ready(function () {
+$(document).ready(function () {
 
-// 	var browserWidth = $(window).width();
+	var browserWidth = $(window).width();
 	
-// 	if (browserWidth > 560){ 
+	if (browserWidth > 560){ 
 	
-// 		$(window).scroll(function() {
-// 			parallax();
-// 			navbar();
-// 		});
+		$(window).scroll(function() {
+			parallax();
+			navbar();
+		});
 	
-// 	}
+	}
 
-// });	
+});	
 
 
-// $(window).resize(function () {
+$(window).resize(function () {
 
-// 	var browserWidth = $(window).width();
+	var browserWidth = $(window).width();
 	
-// 	if (browserWidth > 560){ 
+	if (browserWidth > 560){ 
 	
-// 		$(window).scroll(function() {
-// 			parallax();
-// 			navbar();
-// 		});
+		$(window).scroll(function() {
+			parallax();
+			navbar();
+		});
 	
-// 	}
+	}
 
-// });	
+});	
 
 
-// // iPhone Header Carousel
-// $('header .carousel').carousel({
-//   interval: 3000
-// })
+// iPhone Header Carousel
+$('header .carousel').carousel({
+  interval: 3000
+})
 
-// // iPhone Features Carousel
-// $('.detail .carousel').carousel({
-//   interval: 4000
-// })
+// iPhone Features Carousel
+$('.detail .carousel').carousel({
+  interval: 4000
+})
 
-// 	  </script>
+	  </script>
     <script src="vendor/assets/javascripts/jquery.js"></script>
     <script src="vendor/assets/javascripts/bootstrap.min.js"></script>
     <script src="vendor/assets/javascripts/animatescroll.js"></script>
