debug complete, all systems go.

--- a/geotrigger_app/app/views/activities/index.html.erb
+++ b/geotrigger_app/app/views/activities/index.html.erb
@@ -6,10 +6,11 @@
 <% @activities.each do |activity| %>
   <div>
     <p>
-       <strong>Latitude:</strong>  <%= activity.latitude %>
-       <strong>Longtitude:</strong>  <%= activity.longitude%>
+       <strong>Latitude:</strong>  <%= activity.lat %>
+       <strong>Longtitude:</strong>  <%= activity.lon %>
        <strong>Location:</strong>  <%= activity.location_name %>
        <strong>Type of Activity:</strong>  <%= activity.activity_tag %>
+       <strong> Activity Description:</strong> <%= activity.activity_description %>
       <%= link_to "EDIT", edit_activity_path(activity), method: "GET" %> 
       <%= button_to "DELETE",  activity_path(activity), method: :delete %>
 
