fixed merge conflict from earlier. head removed, migrations fixed.

--- a/geotrigger_app/app/views/layouts/_navigation.html.erb
+++ b/geotrigger_app/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
  <!-- 
  	=================== NAVBAR ===================== -->
 	<nav class="navbar navbar-default navbar-fixed-top">
-	<a class="navbar-brand" href="/login">Around & Down</a>
+	<a class="navbar-brand" href="/">Around & Down</a>
 	<ul class="nav navbar-nav navbar-right">
 	  <button type="button" class="navbar-toggle">
 	    <span class="sr-only">Toggle navigation</span>
