--- a/geotrigger_app/app/views/users/index.html.erb
+++ b/geotrigger_app/app/views/users/index.html.erb
@@ -69,6 +69,6 @@ border-radius: 200px;
 <div class='custom-popup' id='map'></div>
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpInsA8ggRqbXrJRtAw';
-var map = L.mapbox.map('map', 'examples.map-zr0njcqy');
+var map = L.mapbox.map('map', 'jkdale89.l2l2p32i');
 </script>
 
