--- a/geotrigger_app/app/views/layouts/_navigation.html.erb
+++ b/geotrigger_app/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,8 @@
 	  <ul class="nav navbar-nav">
 	    <li><a href="/sign_up">Sign Up</a></li>
 	    <li><a href="/login">Login</a></li>
-	    <li><a href="#app_features">Features</a></li>
+	    <li><a href="/users/:id">Profile</a></li>
+	    <li><a href="/users">Who's Around?</a></li>
 	    <li><a href="#the_architects">The Architects</a></li>
 	    <li><a href="#connect_with_us">Contact Us</a></li>
 	  </ul>
