--- a/geotrigger_app/app/views/sites/index.html.erb
+++ b/geotrigger_app/app/views/sites/index.html.erb
@@ -189,7 +189,7 @@
 	  			<div class="col-md-12">
 	  				<hr />
 		  			<ul>
-            	<li><a href="#link-here">Contact</a></li>
+            	<li><a href="#connect_with_us">Contact</a></li>
             	<li><a href="#link-here">Twitter</a></li>
             	<li><a href="#link-here">Blog</a></li>
             	<li><a href="#link-here">Support</a></li>
