--- a/geotrigger_app/app/views/users/new.html.erb
+++ b/geotrigger_app/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Create an Account</h1>
-<p>Sign Up below!</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1>Sign Up below!</h1>
 
 <!-- this is the Twitter button -->
 <!-- <button>Sign-In with Twitter</button> -->
