--- a/geotrigger_app/app/views/activities/new.html.erb
+++ b/geotrigger_app/app/views/activities/new.html.erb
@@ -1,5 +1,10 @@
 <form action="/activities" method="post">
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1> Create New Activity </h1>
     Latitude <br>
     <input type="text" name="activity[lat]"> <br>
 
