--- a/geotrigger_app/app/views/users/show.html.erb
+++ b/geotrigger_app/app/views/users/show.html.erb
@@ -1,13 +1,17 @@
 <h1> Your Profile! <h1>
-<p> Username: <%= @user.email %></p>
+<p> Welcome <%= @user.email %></p>
+<div class="row">
+<div class="col-xs-6">
+
 <h2> Your Friends! <h2>
 <% @friends.each do |friend| %>
-	<div>
-		<%= friend.email %>
-		<%= button_to "remove", friend, :method => :delete %>
-	</div>
+<div>
+<%= friend.email %>
+<%= button_to "remove", friend, :method => :delete %>
+</div>
 <% end %>
 <p><%= link_to "Find Friends", users_path %></p>
+</div>
 
 <h2>Users Who Have Befriended You</h2>
 <ul>
@@ -15,3 +19,4 @@
   <li><%= user.email %></li>
   <% end %>
 </ul>
+</div>
