--- a/geotrigger_app/app/views/activities/index.html.erb
+++ b/geotrigger_app/app/views/activities/index.html.erb
@@ -7,10 +7,10 @@
 <% @activities.each do |activity| %>
   <div>
     <p>
-       <strong>Latitude:</strong>  <%= activity.lat %>
-       <strong>Longtitude:</strong>  <%= activity.lon %>
-       <strong>Location:</strong>  <%= activity.location_name %>
-       <strong>Type of Activity:</strong>  <%= activity.activity_tag %>
+       <strong>Latitude:</strong>  <%= activity.lat %><br>
+       <strong>Longtitude:</strong>  <%= activity.lon %><br>
+       <strong>Location:</strong>  <%= activity.location_name %> <br>
+       <strong>Type of Activity:</strong>  <%= activity.activity_tag %> <br>
        <strong> Activity Description:</strong> <%= activity.activity_description %><%= button_to "EDIT", edit_activity_path(activity), method: "GET" %> 
        <%= button_to "DELETE",  activity_path(activity), method: :delete %>
 
