--- a/geotrigger_app/app/views/sites/index.html.erb
+++ b/geotrigger_app/app/views/sites/index.html.erb
@@ -79,9 +79,8 @@
 					    <div class="item active">
 					      	<div class="row">
 					      		<div class="col-sm-12 col-md-offset-1 col-md-6">
-					      			<h1>Special Shout Out To <br />
-					      				Mike "The Sauce" Desa</h1>
-					      			<p>(The only man to eat more Ecstasy than a drug trial chimpanzee)</p>
+					      			<h1>Some People are Around, but not Down</h1>
+					      			<p>Can't do much with that...</p>
 					      		</div>
 					      		<div class="col-sm-12 col-md-5">
 					      			<div class="app-screenshot">
@@ -93,8 +92,8 @@
 					    <div class="item">
 					    	<div class="row">
 					    		<div class="col-sm-12 col-md-offset-1 col-md-6">
-					    			<h1>Sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
-					    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					    			<h1>Some People are Down, but not Around</h1>
+					    			<p>And there's surge pricing...fuck that</p>
 					    		</div>
 					    		<div class="col-sm-12 col-md-5">
 					    			<div class="app-screenshot">
@@ -106,8 +105,8 @@
 					    <div class="item">
 					      <div class="row">
 					      	<div class="col-sm-12 col-md-offset-1 col-md-6">
-					      		<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
-					      		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+					      		<h1>Who is Around AND Down?</h1>
+					      		<p>Yeeeeeeeeeeee</p>
 					      	</div>
 					      	<div class="col-sm-12 col-md-5">
 					      		<div class="app-screenshot">
