seed user friendships, minor styling tweaks to user show.html view.

--- a/geotrigger_app/app/views/users/index.html.erb
+++ b/geotrigger_app/app/views/users/index.html.erb
@@ -35,7 +35,7 @@
 .leaflet-control-mapbox-geocoder-form {
   background: #f7dcf7;
   margin-bottom: 0px;
-  color: white;
+  color: black;
 
 }
 
@@ -43,7 +43,7 @@
   position: absolute;
   left: 37.5%;
   bottom: 150px;
-  color: white;
+  color: black;
 }
  
 .leaflet-control-attribution {
@@ -84,7 +84,7 @@ border-radius: 200px;
     width: 30px;
   }
 .text {
-  color: white;
+  color: black;
 }
 
 .custom-popup .leaflet-popup-tip {
